<resources>
    <string name="app_name">Fant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fant</string>
    <string name="nav_header_subtitle">admin@fant.no</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--    USER/AUTH-->
    <string name="text_login">Login</string>
    <string name="text_email">Email</string>
    <string name="text_first_name">First name</string>
    <string name="text_last_name">Last name</string>
    <string name="text_password">Password</string>
    <string name="text_password_again">Retype password</string>
    <string name="text_create">Create</string>
    <string name="text_register">Register</string>
    <string name="text_login_wrong_email_password">Wrong email and/or password</string>
    <string name="text_login_error">Error logging in</string>
    <string name="text_invalid_email">Email address is not valid</string>
    <string name="text_invalid_password">Password must be 6 or more characters</string>
    <string name="text_password_not_equal">Passwords are not equal</string>
    <string name="text_can_not_be_blank">Can not be blank</string>
    <string name="text_user_was_created">User was successfully created</string>


    <!--    SHOP-->
    <string name="text_item_name">Name</string>
    <string name="text_item_price">Price</string>
    <string name="text__item_description">Description</string>
    <string name="text_buy">Buy</string>
    <string name="text_create_item">Create item</string>
    <string name="content_image_of_item_to_sell">Image of the item to sell</string>
    <string name="item_image_description">Image of item</string>
    <string name="item_must_have_positive_price">Must have a positive price</string>
    <string name="item_must_have_a_picture">Please select a picture</string>
    <string name="text_login_to_buy">Login to buy</string>
    <string name="text_could_not_create_item">Could not create item</string>
    <string name="text_item_is_now_for_sale">Your item is now for sale</string>


    <string name="text_search">Search</string>

    <string name="menu_home">Fant</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_item">Add new item</string>
    <string name="menu_login">Login</string>
    <string name="menu_current_user">Profile</string>
    <string name="menu_register">Register</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_my_items">My items</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
