<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_add_item"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_add_item" />
        <item
            android:id="@+id/nav_my_items"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_my_items"
            android:visible="false" />
        <item
            android:id="@+id/nav_current_user"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_current_user" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_menu_slideshow"
            android:onClick="logout"
            android:title="@string/menu_sign_out" />
    </group>
</menu>