<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.traeen.fant.ui.items_display.ItemsDisplayFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.traeen.fant.ui.item_display.ItemDisplayFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_view_item" />

    <fragment
        android:id="@+id/nav_add_item"
        android:name="com.traeen.fant.ui.new_item.NewItemsFragment"
        android:label="@string/menu_add_item"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_view_item"
        android:name="com.traeen.fant.ui.item_display.ItemDisplayFragment"
        tools:layout="@layout/fragment_view_item" />

    <activity
        android:id="@+id/nav_login"
        android:name="com.traeen.fant.Login"
        android:label="@string/menu_login"
        tools:layout="@layout/activity_login" />


    <activity
        android:id="@+id/nav_create_user"
        android:name="com.traeen.fant.CreateUser"
        android:label="activity_create_user"
        tools:layout="@layout/activity_create_user" />


</navigation>