<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login_display.LoginDisplayFragment">

    <EditText
        android:id="@+id/input_email"
        android:layout_width="250dp"
        android:layout_height="38dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:background="@android:drawable/divider_horizontal_textfield"
        android:ems="10"
        android:hint="@string/text_email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#123550"
        android:text="admin@fant.no"
        app:layout_constraintBottom_toTopOf="@+id/input_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="250dp"
        android:layout_height="38dp"
        android:autofillHints=""
        android:text="123456789"
        android:background="@android:drawable/divider_horizontal_textfield"
        android:ems="10"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#123550"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
e

    <Button
        android:id="@+id/register_submit"
        style="@style/button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/text_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />
</androidx.constraintlayout.widget.ConstraintLayout>